==> mbed-ce/mbed-os/targets/TARGET_RENESAS/TARGET_RA/flash_api.c <==
/* mbed Microcontroller Library
 * Copyright (c) 2024 ARM Limited
 * SPDX-License-Identifier: Apache-2.0
 */
#include "mbed_critical.h"
#include "flash_api.h"
#include <string.h>

#include "r_flash_hp.h"
#include "bsp_api.h"
#include "flash_device.h"

/* Flash instance generated by FSP */
extern const flash_instance_t g_flash0;

/* Shortcuts */
#define FLASH_CTRL   ((flash_ctrl_t *)g_flash0.p_ctrl)
#define FLASH_CFG    ((flash_cfg_t  *)g_flash0.p_cfg)

/* ---------------------------------------------------------
 * Helper Functions
 * ---------------------------------------------------------
 * Determine whether an address belongs to Code Flash or Data Flash.
 */

static int is_in_code_flash(uint32_t addr)
{
    return (addr >= RA_CF_START) && (addr < (RA_CF_START + RA_CF_SIZE));
}

static int is_in_data_flash(uint32_t addr)
{
    return (addr >= RA_DF_START) && (addr < (RA_DF_START + RA_DF_SIZE));
}

/* ---------------------------------------------------------
 * Mbed Flash API Implementation
 * ---------------------------------------------------------
 */

int32_t flash_init(flash_t *obj)
{
    (void)obj;
    fsp_err_t err = R_FLASH_HP_Open(FLASH_CTRL, FLASH_CFG);
    return (err == FSP_SUCCESS) ? 0 : -1;
}

int32_t flash_free(flash_t *obj)
{
    (void)obj;
    fsp_err_t err = R_FLASH_HP_Close(FLASH_CTRL);
    return (err == FSP_SUCCESS) ? 0 : -1;
}

int32_t flash_erase_sector(flash_t *obj, uint32_t address)
{
    (void)obj;

    /* Mbed guarantees the address is aligned to sector boundary */
    if (!is_in_code_flash(address) && !is_in_data_flash(address)) {
        return -1;
    }

    /* Erase one block (one sector) */
    core_util_critical_section_enter();
    fsp_err_t err = R_FLASH_HP_Erase(FLASH_CTRL, address, 1u);
    core_util_critical_section_exit();
    return (err == FSP_SUCCESS) ? 0 : -1;
}

int32_t flash_read(flash_t *obj, uint32_t address, uint8_t *data, uint32_t size)
{
    (void)obj;

    /* Flash is memory-mapped, so memcpy is sufficient */
    memcpy(data, (const void *)address, size);
    return 0;
}

int32_t flash_program_page(flash_t *obj, uint32_t address, const uint8_t *data, uint32_t size)
{
    (void)obj;

    /* Mbed guarantees:
     * - data is 32-bit aligned
     * - size is a multiple of page size
     * - address is inside a flash sector
     * - address is aligned to page size
     */
    if (!is_in_code_flash(address) && !is_in_data_flash(address)) {
        return -1;
    }

    core_util_critical_section_enter();
    fsp_err_t err = R_FLASH_HP_Write(FLASH_CTRL, (uint32_t)data, address, size);
    core_util_critical_section_exit();
    return (err == FSP_SUCCESS) ? 0 : -1;
}

uint32_t flash_get_sector_size(const flash_t *obj, uint32_t address)
{
    (void)obj;

    if (is_in_code_flash(address)) {
        return RA_CF_SECTOR_SIZE;
    } else if (is_in_data_flash(address)) {
        return RA_DF_SECTOR_SIZE;
    } else {
        return (uint32_t)-1; /* Invalid address */
    }
}

uint32_t flash_get_page_size(const flash_t *obj)
{
    (void)obj;

    /* Return the minimum writable unit for Code Flash.
     * Data Flash write size can be queried separately if needed.
     */
    return RA_CF_WRITE_SIZE;
}

uint32_t flash_get_start_address(const flash_t *obj)
{
    (void)obj;
    return RA_CF_START;
}

uint32_t flash_get_size(const flash_t *obj)
{
    (void)obj;
    return RA_CF_SIZE;
}

uint8_t flash_get_erase_value(const flash_t *obj)
{
    (void)obj;
    return 0xFF; /* All RA Flash erases to 0xFF */
}

/* ---------------------------------------------------------
 * Export Data Flash information for upper layers
 * ---------------------------------------------------------
 */

uint32_t ra_flash_get_data_flash_start(void)
{
    return RA_DF_START;
}

uint32_t ra_flash_get_data_flash_size(void)
{
    return RA_DF_SIZE;
}

uint32_t ra_flash_get_data_flash_sector_size(void)
{
    return RA_DF_SECTOR_SIZE;
}

uint32_t ra_flash_get_data_flash_write_size(void)
{
    return RA_DF_WRITE_SIZE;
}

/* ---------------------------------------------------------
 * Callback function
 * ---------------------------------------------------------
 */

void flash_callback(flash_callback_args_t * p_args)
{
    (void)p_args;
}
